feat:refactor and change license
Signed-off-by: Chen Kai <281165273grape@gmail.com>